[package]
name = "lfqueue"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A bounded, lock-free MPMC queue implemented in Rust with atomics and explicit memory ordering."
repository = "https://github.com/czhao-dev/lock-free-queue"

[lib]
name = "lfqueue"
path = "src/lib.rs"

[[example]]
name = "throughput_bench"
path = "benchmarks/throughput_bench.rs"

[[example]]
name = "padding_bench"
path = "benchmarks/padding_bench.rs"

[[example]]
name = "latency_bench"
path = "benchmarks/latency_bench.rs"

[profile.release]
opt-level = 3
codegen-units = 1
